fixed images not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ nav a:hover {
 
 /* hero background image */
 .hero {
-    background-image: url("/assets/images/ameen-fahmy-mXpTl4jNKiA-unsplash.jpg");
+    background-image: url("../assets/images/ameen-fahmy-mXpTl4jNKiA-unsplash.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
